# handobar

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.agents/skills/agent/: SKILL.md
.agents/skills/claude-usage/: SKILL.md
.agents/skills/commit-message/: SKILL.md
.agents/skills/hb-agent/: SKILL.md
.agents/skills/hb-commit/: SKILL.md
.agents/skills/hb-tauri/: SKILL.md
.agents/skills/hb-testing/: SKILL.md
.agents/skills/hb-usage/: SKILL.md
.agents/skills/hb-version/: SKILL.md
.agents/skills/tauri/: SKILL.md
.agents/skills/testing/: SKILL.md
.agents/skills/usage/: SKILL.md
.agents/skills/version-bump/: SKILL.md
.claude/skills/: version-bump
.github/workflows/: release.yml
docs/: brew.md  index.html  script.js  tauri.md
scripts/: apply-dmg-icon.sh  setup-macos-signing.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: labels.rs  lib.rs  main.rs  usage.rs
src-tauri/src/usage/: api.rs  cache.rs  command.rs  credentials.rs  messages.rs  mod.rs  model.rs  models.rs
src-tauri/src/usage/antigravity/: api.rs  credentials.rs  messages.rs  mod.rs  source.rs
src-tauri/src/usage/claude/: api.rs  credentials.rs  messages.rs  mod.rs
src-tauri/src/usage/codex/: messages.rs  mod.rs  source.rs
src/assets/fonts/: fonts.css
src/features/antigravityUsage/: provider.ts
src/features/claudeUsage/: WindowCard.tsx  config.ts  copy.ts  format.test.ts  format.ts  provider.ts  storage.test.ts  storage.ts  types.ts  usageGateway.ts  useClaudeUsage.ts
(+28 files in other folders)
